--- a/fundr/main_app/templates/base-desktop.html
+++ b/fundr/main_app/templates/base-desktop.html
@@ -30,7 +30,7 @@
 
 
     async function constructURL(lat, lon) {
-      let baseURL = 'https://fundr.fly.dev'
+      let baseURL = 'https://fundr-app.fly.dev'
       let endpoint = '/userlocation/'
       let queryParameters = `?lat=${lat}&lon=${lon}/`;
       let url = baseURL + endpoint + queryParameters
