--- a/fundr/main_app/templates/base.html
+++ b/fundr/main_app/templates/base.html
@@ -24,7 +24,7 @@
   <script>
     
     async function constructURL(lat, lon) {
-      let baseURL = 'https://fundr.fly.dev'
+      let baseURL = 'https://fundr-app.fly.dev'
       let endpoint = '/userlocation/'
       let queryParameters = `?lat=${lat}&lon=${lon}/`;
       let url = baseURL + endpoint + queryParameters
